@@ -1,6 +1,6 @@
 import logging
 
-__version__ = '1.2.1'
+__version__ = '1.2.2.dev1'
 
 log = logging.getLogger(__name__)
 
